maven/com.nextbreakpoint.nextfractal.mandelbrot/src/main/antlr4/com/nextbreakpoint/nextfractal/mandelbrot/grammar/MandelbrotParser.java
// Generated from com/nextbreakpoint/nextfractal/mandelbrot/grammar/Mandelbrot.g4 by ANTLR 4.5.1
package com.nextbreakpoint.nextfractal.mandelbrot.grammar;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MandelbrotParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, FRACTAL=55, ORBIT=56, TRAP=57, BEGIN=58, LOOP=59, 
		END=60, INIT=61, IF=62, STOP=63, JULIA=64, COLOR=65, PALETTE=66, RULE=67, 
		ARGB=68, RATIONAL=69, INTEGER=70, PATHOP_1POINTS=71, PATHOP_2POINTS=72, 
		PATHOP_3POINTS=73, VARIABLE=74, COMMENT=75, WHITESPACE=76;
	public static final int
		RULE_fractal = 0, RULE_orbit = 1, RULE_color = 2, RULE_begin = 3, RULE_loop = 4, 
		RULE_end = 5, RULE_trap = 6, RULE_pathop = 7, RULE_beginstatement = 8, 
		RULE_loopstatement = 9, RULE_endstatement = 10, RULE_statement = 11, RULE_statevariable = 12, 
		RULE_statevariablelist = 13, RULE_simpleconditionexp = 14, RULE_conditionexp = 15, 
		RULE_conditionexp2 = 16, RULE_conditionexp3 = 17, RULE_conditionexp4 = 18, 
		RULE_simpleexpression = 19, RULE_expression = 20, RULE_expression2 = 21, 
		RULE_expression3 = 22, RULE_expression4 = 23, RULE_function = 24, RULE_constant = 25, 
		RULE_variable = 26, RULE_real = 27, RULE_complex = 28, RULE_palette = 29, 
		RULE_paletteelement = 30, RULE_colorinit = 31, RULE_colorstatement = 32, 
		RULE_colorrule = 33, RULE_ruleexp = 34, RULE_colorexp = 35, RULE_colorargb = 36, 
		RULE_eof = 37;
	public static final String[] ruleNames = {
		"fractal", "orbit", "color", "begin", "loop", "end", "trap", "pathop", 
		"beginstatement", "loopstatement", "endstatement", "statement", "statevariable", 
		"statevariablelist", "simpleconditionexp", "conditionexp", "conditionexp2", 
		"conditionexp3", "conditionexp4", "simpleexpression", "expression", "expression2", 
		"expression3", "expression4", "function", "constant", "variable", "real", 
		"complex", "palette", "paletteelement", "colorinit", "colorstatement", 
		"colorrule", "ruleexp", "colorexp", "colorargb", "eof"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "'['", "','", "']'", "'('", "')'", "';'", "'='", "'else'", 
		"'real'", "'complex'", "'<'", "'>'", "'<='", "'>='", "'<>'", "'?'", "'~?'", 
		"'|'", "'^'", "'&'", "'~'", "'+'", "'-'", "'*'", "'i'", "'/'", "'mod'", 
		"'mod2'", "'pha'", "'re'", "'im'", "'cos'", "'sin'", "'tan'", "'acos'", 
		"'asin'", "'atan'", "'log'", "'exp'", "'sqrt'", "'abs'", "'ceil'", "'floor'", 
		"'pow'", "'atan2'", "'hypot'", "'max'", "'min'", "'e'", "'pi'", "'2pi'", 
		"'#'", "'fractal'", "'orbit'", "'trap'", "'begin'", "'loop'", "'end'", 
		"'init'", "'if'", "'stop'", "'julia'", "'color'", "'palette'", "'rule'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "FRACTAL", "ORBIT", "TRAP", 
		"BEGIN", "LOOP", "END", "INIT", "IF", "STOP", "JULIA", "COLOR", "PALETTE", 
		"RULE", "ARGB", "RATIONAL", "INTEGER", "PATHOP_1POINTS", "PATHOP_2POINTS", 
		"PATHOP_3POINTS", "VARIABLE", "COMMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mandelbrot.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private ASTBuilder builder = new ASTBuilder();
		
		public ASTBuilder getBuilder() { return builder; }

	public MandelbrotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FractalContext extends ParserRuleContext {
		public Token f;
		public OrbitContext orbit() {
			return getRuleContext(OrbitContext.class,0);
		}
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public EofContext eof() {
			return getRuleContext(EofContext.class,0);
		}
		public TerminalNode FRACTAL() { return getToken(MandelbrotParser.FRACTAL, 0); }
		public FractalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fractal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MandelbrotListener ) ((MandelbrotListener)listener).enterFractal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MandelbrotListener ) ((MandelbrotListener)listener).exitFractal(this);
		}
	}

	public final FractalContext fractal() throws RecognitionException {
		FractalContext _localctx = new FractalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fractal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((FractalContext)_localctx).f = match(FRACTAL);

					builder.setFractal(new ASTFractal(((FractalContext)_localctx).f));
				
			setState(78);
			match(T__0);
			setState(79);
			orbit();
			setState(80);
			color();
			setState(81);
			match(T__1);
			setState(82);
			eof();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrbitContext extends ParserRuleContext {
		public Token o;
		public ComplexContext ra;
		public ComplexContext rb;
		public StatevariablelistContext statevariablelist() {
			return getRuleContext(StatevariablelistContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public TerminalNode ORBIT() { return getToken(MandelbrotParser.ORBIT, 0); }
		public List<ComplexContext> complex() {
			return getRuleContexts(ComplexContext.class);
		}
		public ComplexContext complex(int i) {
			return getRuleContext(ComplexContext.class,i);
		}
		public List<TrapContext> trap() {
			return getRuleContexts(TrapContext.class);
		}
		public TrapContext trap(int i) {
			return getRuleContext(TrapContext.class,i);
		}
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public OrbitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orbit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MandelbrotListener ) ((MandelbrotListener)listener).enterOrbit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MandelbrotListener ) ((MandelbrotListener)listener).exitOrbit(this);
		}
	}

	public final OrbitContext orbit() throws RecognitionException {
		OrbitContext _localctx = new OrbitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_orbit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((OrbitContext)_localctx).o = match(ORBIT);
			setState(85);
			match(T__2);
			setState(86);
			((OrbitContext)_localctx).ra = complex();
			setState(87);
			match(T__3);
			setState(88);
			((OrbitContext)_localctx).rb = complex();
			setState(89);
			match(T__4);

					builder.setOrbit(new ASTOrbit(((OrbitContext)_localctx).o, new ASTRegion(((OrbitContext)_localctx).ra.result, ((OrbitContext)_localctx).rb.result)));
				
			setState(91);
			match(T__2);
			setState(92);
			statevariablelist(0);
			setState(93);
			match(T__4);
			setState(94);
			match(T__0);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TRAP) {
				{
				{
				setState(95);
				trap();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			_la = _input.LA(1);
			if (_la==BEGIN) {
				{
				setState(101);
				begin();
				}
			}

			setState(104);
			loop();
			setState(106);
			_la = _input.LA(1);
			if (_la==END) {
				{
				setState(105);
				end();
				}
			}

			setState(108);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorContext extends ParserRuleContext {
		public Token c;
		public ColorargbContext argb;
		public TerminalNode COLOR() { return getToken(MandelbrotParser.COLOR, 0); }
		public ColorargbContext colorargb() {
			return getRuleContext(ColorargbContext.class,0);
		}
		public List<PaletteContext> palette() {
			return getRuleContexts(PaletteContext.class);
		}
		public PaletteContext palette(int i) {
			return getRuleContext(PaletteContext.class,i);
		}
		public ColorinitContext colorinit() {
			return getRuleContext(ColorinitContext.class,0);
		}
		public List<ColorruleContext> colorrule() {
			return getRuleContexts(ColorruleContext.class);
		}
		public ColorruleContext colorrule(int i) {
			return getRuleContext(ColorruleContext.class,i);
		}
		public ColorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_color; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MandelbrotListener ) ((MandelbrotListener)listener).enterColor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MandelbrotListener ) ((MandelbrotListener)listener).exitColor(this);
		}
	}

	public final ColorContext color() throws RecognitionException {
		ColorContext _localctx = new ColorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_color);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			((ColorContext)_localctx).c = match(COLOR);
			setState(111);
			match(T__2);
			setState(112);
			((ColorContext)_localctx).argb = colorargb();
			setState(113);
			match(T__4);
			 
					builder.setColor(new ASTColor(((ColorContext)_localctx).c, ((ColorContext)_localctx).argb.result));
				
			setState(115);
			match(T__0);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PALETTE) {
				{
				{
				setState(116);
				palette();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			_la = _input.LA(1);
			if (_la==INIT) {
				{
				setState(122);
				colorinit();
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RULE) {
				{
				{
				setState(125);
				colorrule();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
